# obs-device-switcher

./: CMakeLists.txt  README.md  buildspec.json  device-switcher.cpp  device-switcher.hpp  installer.iss.in  volume-meter.cpp  volume-meter.hpp
.github/workflows/: build.yml
CI/macos/: device-switcher.pkgproj
data/config/: config.ini
data/locale/: en-US.ini
